Fix spacing on comments (extra padding was breaking the reply connectors)

--- a/src/sass/site/primary/_comments.scss
+++ b/src/sass/site/primary/_comments.scss
@@ -4,6 +4,7 @@
 .comment-list,
 .children {
 	margin: 0;
+	padding: 0;
 	list-style: none;
 }
 
